// file: pkg/config/proto/responses/get_config_response.proto
edition = "2023";

package gcommon.v1.config;

import "google/protobuf/go_features.proto";

import "common/proto/error.proto";
import "pkg/config/proto/config_entry.proto";
import "config/proto/config_entry.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/config/proto";

/**
 * GetConfigResponse contains a configuration entry or error information.
 */
message GetConfigResponse {
  // Configuration entry
  ConfigEntry entry = 1;

  // Whether the key was found
  bool found = 2;

  // Error information
  gcommon.v1.common.Error error = 3;
}
