// file: pkg/config/proto/requests/get_config_request.proto
edition = "2023";

package gcommon.v1.config;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/request_metadata.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/config/proto;configpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Request to retrieve a configuration value.
 * Supports hierarchical key lookup and environment-specific overrides.
 */
message GetConfigRequest {
  // Configuration key (supports dot notation for hierarchy)
  string key = 1;

  // Environment context (e.g., "dev", "staging", "prod")
  string environment = 2;

  // Service/module context for scoped configuration
  string service = 3;

  // Request metadata for tracing and correlation
  gcommon.v1.common.RequestMetadata metadata = 4 [lazy = true];

  // Whether to include metadata in response
  bool include_metadata = 5;
}
